# ClashNode

./: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.zcode/plans/: plan-sess_4188afb9-fb66-4b14-83cf-9b0dc34dcd29.md  plan-sess_7b0d9ada-66ea-4321-9304-8ee34c9eeb44.md
docs/: CROSS-PLATFORM.md  TUN-NETWORK-EXTENSION.md
electron/: main.ts  preload.ts
electron/core/: api.ts  config-merger.test.ts  config-merger.ts  script-runner.ts  supervisor.ts
electron/shared/: ipc.ts  schemas.ts  types.ts
electron/store/: archive.ts  geo.ts  paths.atomic.test.ts  paths.ts  profiles.decode.test.ts  profiles.ts  scripts.ts  settings.normalize.test.ts  settings.ts  webdav.ts
electron/system/: autolaunch.ts  connectivity.ts  elevate.ts  helper.ts  hotkeys.ts  protocol.ts  proxy-linux.ts  proxy-mac.ts  proxy-win.ts  proxy.ts  tray.ts  updater.ts
resources/icons/: README.md  icon.icns
scripts/: build-helper.sh  fetch-mihomo.sh  fetch-wintun.sh  generate-icons.sh  nsis-hooks.nsh  prepare-platform-icons.sh  run-bash.cjs
services/helper/: Cargo.toml
services/helper/src/service/: hub.rs  windows.rs
src/: App.tsx  index.css  vite-env.d.ts
src/app/: shell.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/entities/mihomo/: types.ts
src/features/connections/: page.tsx
src/features/dashboard/: page.tsx
src/features/logs/: page.tsx
src/types/: jsqr.d.ts
(+20 files in other folders)
