[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helper"
path = "src/main.rs"

[features]
default = ["windows-service"]
windows-service = ["dep:windows-service"]

[dependencies]
windows-service = { version = "0.7.0", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
sha2 = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
